# ccmV2

./: .gitignore  IDCCommon.cmake  IDCCommon.cmake.feeling  IDCCommon.cmake.yogurt
GenVD/: CMakeLists.txt
GenVD/inc/: GenComm.h  GenVdProc.h  GenVdTypes.h
GenVD/src/: GenComm.cpp  GenVdMain.cpp  GenVdProc.cpp
IDCLibs/IDCBase/: CMakeLists.txt
IDCLibs/IDCBase/inc/: IDCAlarm.h  IDCMsgQueue.h  IDCSema.h  IDCThread.h
IDCLibs/IDCBase/src/: IDCAlarm.cpp  IDCMsgQueue.cpp  IDCSema.cpp  IDCThread.cpp
IDCLibs/IDCLog/: CMakeLists.txt
IDCLibs/IDCLog/LogSrv/: CMakeLists.txt  cfg.cpp  cfg.h  server.cpp
IDCLibs/IDCLog/inc/: LogTrace.h
IDCLibs/IDCLog/src/: LogTrace.cpp
IDCLibs/IDCXTP/: CMakeLists.txt
IDCLibs/IDCXTP/Client/: CMakeLists.txt
IDCLibs/IDCXTP/Client/inc/: xtpClient.h
IDCLibs/IDCXTP/Client/src/: xtpClient.cpp
IDCLibs/IDCXTP/Server/: CMakeLists.txt
IDCLibs/IDCXTP/Server/inc/: ExtComm.h  XtpServer.h  msgqueue.h
IDCLibs/IDCXTP/Server/src/: ExtComm.cpp  msgqueue.cpp  xtpServer.cpp
IDCLibs/IDCXTP/inc/: xtpcomm.h  xtpobj.h
XMaster/: CMakeLists.txt
XMaster/inc/: IDCXTaskID.h  Init.h  XGenTypes.h  XGenerator.h  XMaster.h  XMasterTypes.h  XTui.h  XTypes.h
XMaster/src/: Init.cpp  XGenerator.cpp  XMaster.cpp  XTui.cpp
inc/: BroadcastList.h  GenTypes.h  TuiTypes.h  Types.h  XtpNode.h
